# crypture

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: cli.hpp  crypto.hpp  storage.hpp
src/: cli.cpp  crypto.cpp  main.cpp  storage.cpp
